--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "license": "MIT",
   "homepage": "https://github.com/helnokaly/adonis-cache",
   "devDependencies": {
-    "adonis-ace": "^3.0.4",
-    "adonis-fold": "^3.0.3",
+    "@adonisjs/ace": "^4.0.5",
+    "@adonisjs/fold": "^4.0.2",
     "chai": "^3.5.0",
     "co-mocha": "^1.1.3",
     "ioredis": "^2.4.0",
     "knex": "^0.12.2",
     "mocha": "^3.1.0",
     "sqlite3": "^3.1.4",
-    "standard": "^8.3.0"
+    "standard": "^10.0.3"
   },
   "dependencies": {
     "co": "^4.6.0",
