--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adonis-cache",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Cache provider for AdonisJs framework",
   "scripts": {
     "test": "node node_modules/.bin/mocha",
@@ -22,12 +22,13 @@
   "devDependencies": {
     "@adonisjs/ace": "^4.0.5",
     "@adonisjs/fold": "^4.0.2",
+    "adonis-commands": "^2.1.5",
     "chai": "^3.5.0",
     "co-mocha": "^1.1.3",
-    "ioredis": "^2.4.0",
+    "ioredis": "^3.1.2",
     "knex": "^0.12.2",
     "mocha": "^3.1.0",
-    "sqlite3": "^3.1.4",
+    "sqlite3": "3.1.8",
     "standard": "^10.0.3"
   },
   "dependencies": {
