--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "devDependencies": {
     "@adonisjs/ace": "^4.0.5",
     "@adonisjs/fold": "^4.0.2",
-    "adonis-commands": "^2.1.5",
     "chai": "^3.5.0",
     "co-mocha": "^1.1.3",
     "ioredis": "^3.1.2",
@@ -33,7 +32,8 @@
   },
   "dependencies": {
     "co": "^4.6.0",
-    "lodash": "^4.16.2"
+    "lodash": "^4.16.2",
+    "adonis-commands": "^2.1.5"
   },
   "standard": {
     "globals": [
